181 remove usage of deprecated jdk code and reduce warnings as well as safer error handling (#182)
* fix compile error on newer JDK versions by removing deprecated API usage

* fix some javadoc errors

* fix some compile warnings (from error-prone)

* reduce javadocs warnings

* improve error robustness

* improve exception handling of client code hidden behind interfaces

* reduce jdocs and compile warnings

* fix compile errors